<resources>
    <string name="app_name">JokenBallZ</string>
    <string name="opcoes">Escolha uma opção</string>
    <string name="ultimaJogada">Última Jogada</string>
    <string name="jogadaPlayer">Você</string>
    <string name="jogadaPC">Android</string>
    <string name="venceu">Você venceu</string>
    <string name="perdeu">Você perdeu</string>
    <string name="empatou">Você empatou</string>
    <string name="resultado">Resultado</string>
</resources>
